# file_mime

./: CMakeLists.txt  README.md
include/file_mime/: file_mime.h
include/image_mime/: image_mime.h
test/: file_mime_test.cpp  image_mime_test.cpp
test/test_files/: Image_10.jp2  Image_9.tif
